<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/golden_page_border"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/transprency"
            android:layout_width="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/final_logo" />

        </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_wifi_off"
            app:tint="@color/golden" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/parnas"
            android:gravity="center"
            android:text="@string/oops"
            android:textColor="@color/golden"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="@color/golden"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/button_retry"
            android:elevation="8dp"
            android:fontFamily="@font/parnas"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>