<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/page_border"
    android:layout_height="match_parent"
    tools:context=".Drawer.WhyActivity">

        <ImageView
            android:id="@+id/logo_jj"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/about_us"
            android:src="@drawable/final_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/parnas"
            android:text="@string/why_jj"
            android:textStyle="bold"
            android:layout_marginTop="-30dp"
            android:textColor="@color/black"
            android:textSize="30sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue"
            android:justificationMode="inter_word"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/why_jj_text"
            android:textColor="@color/golden"
            android:textSize="18sp"
            android:textStyle="bold" />

    </ScrollView>


</LinearLayout>