<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoadingScreenActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/final_logo" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:textAlignment="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/parnas"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/golden"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/helveticaneue"
        android:gravity="center"
        android:text="@string/app_slogan"
        android:textColor="@color/golden"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:id="@+id/change_language"
        android:layout_margin="20dp"
        android:background="@drawable/btn_gradient_style"/>


</LinearLayout>