<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/page_border"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    tools:context=".Login.ProfileActivity">


        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/button_circle"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/profile_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_hint"
                android:textSize="18sp"
                android:fontFamily="@font/helveticaneue"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/golden"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:padding="20dp"
            android:autofillHints="@string/app_name"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/font"
            android:background="@color/transprency"
            android:hint="@string/name_profile"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/golden"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_gradient_style"
        android:elevation="8dp"
        android:fontFamily="@font/parnas"
        android:text="@string/done"
        android:textColor="@color/black" />



</LinearLayout>