<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/page_border"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/final_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/parnas"
            android:gravity="center"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/helveticaneue"
            android:text="@string/phone_desc"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp" />


        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/golden_cardview_border"
            android:padding="5dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true" />

        <EditText
            android:id="@+id/regPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/golden_cardview_border"
            android:hint="@string/phone_no"
            android:fontFamily="@font/helveticaneue"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/get_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_gradient_style"
            android:elevation="5dp"
            android:textStyle="bold"
            android:fontFamily="@font/parnas"
            android:text="@string/otp"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/text_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" OTP has been sent"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</LinearLayout>